re PR c++/47184 ([C++0x] initialization construct interpreted as function declaration‏‏)

PR c++/47184
	* parser.c (cp_parser_parameter_declaration): Recognize
	list-initialization.
	(cp_parser_direct_declarator): Check for the closing
	paren before parsing definitely.

From-SVN: r174232